Bumped version to 3.0.0-beta-1 and Java version to 11